# rlm-memory

./: .gitignore  .mcp.json  LICENSE  README.md  USAGE_GUIDE.md  pyproject.toml
.claude-plugin/: plugin.json
commands/: memory-clear.md  memory-export.md  memory-search.md  memory-status.md
hooks/: hooks.json
src/rlm_memory/: __init__.py  conversation_rlm.py  memory_store.py  retriever.py  server.py  types.py
src/rlm_memory/hooks/: __init__.py  post_tool.py  pre_compact.py  session_start.py
tests/: __init__.py  conftest.py  test_memory_store.py  test_retriever.py  test_server.py
